--- a/order-tracker/index.html
+++ b/order-tracker/index.html
@@ -101,7 +101,6 @@
       <select id="fltSales" class="select"><option value="">All salespeople</option></select>
       <select id="fltStatus" class="select"><option value="">All status</option><option>New</option><option>Open</option><option>Closed</option></select>
       <select id="fltPriority" class="select"><option value="">All priorities</option><option>High</option><option>Normal</option><option>Low</option></select>
-      <!-- inline onclick as a safety net -->
       <button id="btnNew" class="btn" type="button" onclick="openModal(null)">+ New Order</button>
       <button id="btnCsv" class="btn ghost" type="button">Export CSV</button>
     </div>
@@ -306,25 +305,35 @@ const supa = {
   state:{orders:[]},
   getOrders(){return this.state.orders;},
 
+  // 🔧 FIX: no expanded select – fetch related rows per order with Promise.all
   async loadOrders(){
-    const {data, error} = await supabase.from('orders').select(`
-      *,
-      order_items(*),
-      ship_legs(*),
-      shipments_inbound(*),
-      shipments_outbound(*),
-      order_files(*)
-    `).order('order_date',{ascending:false,nullsFirst:true}).order('created_at',{ascending:false});
-    if(error){console.error(error);this.state.orders=[];return;}
+    // 1) pull orders only
+    const {data:orders, error:e0} = await supabase
+      .from('orders')
+      .select('*')
+      .order('order_date',{ascending:false,nullsFirst:true})
+      .order('created_at',{ascending:false});
+    if(e0){ console.error('orders load error', e0); this.state.orders=[]; return; }
 
-    this.state.orders = await Promise.all((data||[]).map(async r=>{
-      const items=(r.order_items||[]).map(i=>({part_number:i.part_number,date_codes:i.date_codes,qty:i.qty,unit_sell:i.unit_sell,unit_cost:i.unit_cost}));
-      const legs=(r.ship_legs||[]).map(l=>({kind:'Leg',date:'',qty:'',from:l.from_loc,to:l.to_loc,method:l.method,ref:l.ref,cost:l.cost}));
-      const inbound=(r.shipments_inbound||[]).map(s=>({kind:'Inbound',date:s.ship_date,qty:s.qty,from:'',to:'',method:'',ref:'',courier:s.courier,tracking:s.tracking,cost:''}));
-      const outbound=(r.shipments_outbound||[]).map(s=>({kind:'Outbound',date:s.ship_date,qty:s.qty,from:'',to:'',method:'',ref:'',courier:s.courier,tracking:s.tracking,cost:''}));
+    // 2) for each order, fetch related tables in parallel
+    this.state.orders = await Promise.all((orders||[]).map(async r=>{
+      const [itemsRes, legsRes, inbRes, outRes, filesRes] = await Promise.all([
+        supabase.from('order_items').select('*').eq('order_id', r.id),
+        supabase.from('ship_legs').select('*').eq('order_id', r.id),
+        supabase.from('shipments_inbound').select('*').eq('order_id', r.id),
+        supabase.from('shipments_outbound').select('*').eq('order_id', r.id),
+        supabase.from('order_files').select('*').eq('order_id', r.id)
+      ]);
+
+      const items = (itemsRes.data||[]).map(i=>({
+        part_number:i.part_number,date_codes:i.date_codes,qty:i.qty,unit_sell:i.unit_sell,unit_cost:i.unit_cost
+      }));
+      const legs = (legsRes.data||[]).map(l=>({kind:'Leg',date:'',qty:'',from:l.from_loc,to:l.to_loc,method:l.method,ref:l.ref,cost:l.cost}));
+      const inbound = (inbRes.data||[]).map(s=>({kind:'Inbound',date:s.ship_date,qty:s.qty,from:'',to:'',method:'',ref:'',courier:s.courier,tracking:s.tracking,cost:''}));
+      const outbound = (outRes.data||[]).map(s=>({kind:'Outbound',date:s.ship_date,qty:s.qty,from:'',to:'',method:'',ref:'',courier:s.courier,tracking:s.tracking,cost:''}));
       const shipments=[...legs,...inbound,...outbound];
 
-      const files=(r.order_files||[]).reduce((a,f)=>{a[f.kind]=f.path;return a;}, {});
+      const files = (filesRes.data||[]).reduce((a,f)=>{a[f.kind]=f.path;return a;}, {});
       let poUrl=null,testUrl=null;
       if(files.po){const {data:s}=await supabase.storage.from('order-files').createSignedUrl(files.po,3600);poUrl=s?.signedUrl||null;}
       if(files.test_report){const {data:s}=await supabase.storage.from('order-files').createSignedUrl(files.test_report,3600);testUrl=s?.signedUrl||null;}
@@ -377,7 +386,7 @@ const supa = {
     const outbound = rec.shipments?.filter(s=>s.kind==='Outbound')||[];
     if(legs.length){
       await supabase.from('ship_legs').insert(legs.map(l=>({
-        order_id, from_loc:l.from, to_loc:l.to, method:l.method, ref:l.ref, cost: Number(l.cost || 0)   /* ✅ fixed */
+        order_id, from_loc:l.from, to_loc:l.to, method:l.method, ref:l.ref, cost: Number(l.cost || 0)   /* fixed syntax */
       })));
     }
     if(inbound.length){
@@ -651,7 +660,7 @@ $('incoterm').addEventListener('change',()=>{
 document.addEventListener('DOMContentLoaded', ()=>{
   $('salesperson').innerHTML = SALESTEAM.map(n=>`<option>${n}</option>`).join('');
   $('fltSales').innerHTML = `<option value="">All salespeople</option>` + SALESTEAM.map(n=>`<option>${n}</option>`).join('');
-  $('btnNew').addEventListener('click', ()=> openModal(null)); // (inline onclick is also present)
+  $('btnNew').addEventListener('click', ()=> openModal(null)); // inline onclick fallback also present
 });
 
 $('addItem').onclick=()=>addItemRow({});
@@ -692,6 +701,7 @@ init();
 </script>
 </body>
 </html>
+
 
 
 
