--- a/order-tracker/index.html
+++ b/order-tracker/index.html
@@ -81,9 +81,25 @@
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
+  /* Supabase client */
   const SUPABASE_URL = 'https://ijzroisggstqkfhpjndq.supabase.co';
   const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImlqenJvaXNnZ3N0cWtmaHBqbmRxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTQ0NzYzMjEsImV4cCI6MjA3MDA1MjMyMX0.ZqI2EiNNROR3Y7MflOeHlAY49N7b89oHA_VcEHVEwjc';
   const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+
+  /* SAFETY SHIM: if any legacy direct REST calls occur, add apikey headers */
+  (function injectApiKeyForLegacyRestCalls(){
+    const realFetch = window.fetch.bind(window);
+    window.fetch = (input, init = {}) => {
+      const url = typeof input === 'string' ? input : input?.url || '';
+      if (url.startsWith(SUPABASE_URL)) {
+        const h = new Headers(init.headers || {});
+        if (!h.has('apikey')) h.set('apikey', SUPABASE_ANON_KEY);
+        if (!h.has('Authorization')) h.set('Authorization', `Bearer ${SUPABASE_ANON_KEY}`);
+        init = { ...init, headers: h };
+      }
+      return realFetch(input, init);
+    };
+  })();
 </script>
 </head>
 <body>
@@ -134,6 +150,7 @@
     </div>
   </div>
 
+  <!-- Modal -->
   <dialog id="dlg">
     <div class="modal">
       <header><div class="head"><strong id="dlgTitle">New Order</strong><button id="btnClose" class="btn ghost mini" type="button">✕</button></div></header>
@@ -305,9 +322,8 @@ const supa = {
   state:{orders:[]},
   getOrders(){return this.state.orders;},
 
-  // 🔧 FIX: no expanded select – fetch related rows per order with Promise.all
+  // Load orders (no expanded select). Fetch related rows per order.
   async loadOrders(){
-    // 1) pull orders only
     const {data:orders, error:e0} = await supabase
       .from('orders')
       .select('*')
@@ -315,7 +331,6 @@ const supa = {
       .order('created_at',{ascending:false});
     if(e0){ console.error('orders load error', e0); this.state.orders=[]; return; }
 
-    // 2) for each order, fetch related tables in parallel
     this.state.orders = await Promise.all((orders||[]).map(async r=>{
       const [itemsRes, legsRes, inbRes, outRes, filesRes] = await Promise.all([
         supabase.from('order_items').select('*').eq('order_id', r.id),
@@ -386,7 +401,7 @@ const supa = {
     const outbound = rec.shipments?.filter(s=>s.kind==='Outbound')||[];
     if(legs.length){
       await supabase.from('ship_legs').insert(legs.map(l=>({
-        order_id, from_loc:l.from, to_loc:l.to, method:l.method, ref:l.ref, cost: Number(l.cost || 0)   /* fixed syntax */
+        order_id, from_loc:l.from, to_loc:l.to, method:l.method, ref:l.ref, cost:Number(l.cost||0)
       })));
     }
     if(inbound.length){
@@ -660,7 +675,7 @@ $('incoterm').addEventListener('change',()=>{
 document.addEventListener('DOMContentLoaded', ()=>{
   $('salesperson').innerHTML = SALESTEAM.map(n=>`<option>${n}</option>`).join('');
   $('fltSales').innerHTML = `<option value="">All salespeople</option>` + SALESTEAM.map(n=>`<option>${n}</option>`).join('');
-  $('btnNew').addEventListener('click', ()=> openModal(null)); // inline onclick fallback also present
+  $('btnNew').addEventListener('click', ()=> openModal(null)); // extra binding
 });
 
 $('addItem').onclick=()=>addItemRow({});
@@ -701,6 +716,7 @@ init();
 </script>
 </body>
 </html>
+
 
 
 
